--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Nedžad Fileković, poznat kao Nedžo,  predstavlja svoju najnoviju ljubavnu pjesmu „Pile, nađi me“"
+      content="Adnan-Hera Hadžibegić predstavlja novi single „Hodaj"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,10 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Nedžad Fileković, poznat kao Nedžo,  predstavlja svoju najnoviju ljubavnu pjesmu „Pile, nađi me“</title>
+    <title>Adnan-Hera Hadžibegić predstavlja novi single „Hodaj“</title>
   </head>
   <body>
-    <noscript>Nedžad Fileković, poznat kao Nedžo,  predstavlja svoju najnoviju ljubavnu pjesmu „Pile, nađi me“</noscript>
+    <noscript>Adnan-Hera Hadžibegić predstavlja novi single „Hodaj“</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
